@@ -5,10 +5,13 @@
 #
 FROM openjdk:8-jdk
 
-ADD . /ache
-WORKDIR /ache
-RUN /ache/gradlew installDist
+ADD . /ache-src
+WORKDIR /ache-src
+RUN /ache-src/gradlew installDist && mv /ache-src/build/install/ache /ache && rm -rf /ache-src/ /root/.gradle
 
-WORKDIR /data
-ENTRYPOINT ["/ache/build/install/ache/bin/ache"]
-VOLUME ["/data", "/config/]
+# Makes JVM aware of memory limit available to the container (cgroups)
+ENV JAVA_OPTS='-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap'
+
+ENTRYPOINT ["/ache/bin/ache"]
+
+VOLUME ["/data", "/config"]
